syntax = "proto3";

package obscura.client;

// ==============================================================================
// Client-to-Client Message Format
// This is the payload inside EncryptedMessage.content
// The server never sees or parses this - it's opaque bytes to the relay.
// ==============================================================================

message ClientMessage {
  enum Type {
    TEXT = 0;
    IMAGE = 1;
  }

  Type type = 1;
  string text = 2;              // Text content (for TEXT type, or caption for IMAGE)
  bytes image_data = 3;         // Raw image bytes (PNG/JPEG)
  string mime_type = 4;         // e.g., "image/png", "image/jpeg"
  uint64 timestamp = 5;         // Client-side timestamp (ms since epoch)
}
